--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom scrollbar hide class */
-.hide-scrollbar::-webkit-scrollbar {
-    display: none;
+/* Stylish Scrollbar */
+.scrollbar-thin::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
 }
 
-.hide-scrollbar {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+.scrollbar-thin::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+    background-color: #6e96cf;
+    border-radius: 10px;
+    border: none;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+    background-color: #4c6e9d;
 }
